--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "jest --coverage",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "build": "npm run lint && npm run test && tsc",
-    "build:run": "npm run build && node dist/index.js",
+    "build:prod": "npm run lint && npm run test && npm run build:prod && npm run build:docs",
+    "build:bundle": "npx webpack-cli",
+    "build:docs": "npx typedoc",
     "dev": "ts-node-dev --respawn -- src/index.ts"
   },
   "keywords": [],
@@ -15,13 +16,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.34",
+    "@types/node": "^14.14.35",
+    "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.22.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.3",
+    "ts-loader": "^8.0.18",
+    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.3"
+    "typedoc": "^0.20.32",
+    "typescript": "^4.2.3",
+    "webpack-cli": "^4.5.0"
   }
 }
